WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302321
[GTK] Fix GTK3 build with unsupported WebKitImage
https://bugs.webkit.org/show_bug.cgi?id=302321
Summary
[GTK] Fix GTK3 build with unsupported WebKitImage
Simon Pena
Reported
2025-11-11 03:01:50 PST
ENABLE_2022_GLIB_API is needed to build WebKitImage. GTK3 doesn't support it.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Pena
Comment 1
2025-11-11 03:09:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53737
EWS
Comment 2
2025-11-11 05:05:19 PST
Committed
302843@main
(edb9d3710725): <
https://commits.webkit.org/302843@main
> Reviewed commits have been landed. Closing PR #53737 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug