[GTK] Fix GTK3 build with unsupported WebKitImage https://bugs.webkit.org/show_bug.cgi?id=302321

Reviewed by Carlos Garcia Campos.

GTK3 does not enable the 2022_GLIB_API that the WebKitImage class needs.
This adds guards to make sure we don't attempt to compile if not
supported.

No need for new tests: tests are similarly compiled out when not
supported.

Canonical link: https://commits.webkit.org/302843@main